--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vim/bundle/vim-endwise.git"]
 	path = vim/bundle/vim-endwise.git
 	url = git@github.com:tpope/vim-endwise.git
+[submodule "vim/bundle/git-vim.git"]
+	path = vim/bundle/git-vim.git
+	url = git@github.com:motemen/git-vim.git
