--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "vim/bundle/nerdcommenter.git"]
 	path = vim/bundle/nerdcommenter.git
 	url = git@github.com:scrooloose/nerdcommenter.git
+[submodule "vim/bundle/nerdtree.git"]
+	path = vim/bundle/nerdtree.git
+	url = git@github.com:scrooloose/nerdtree.git
