--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vim/bundle/tabular.git"]
 	path = vim/bundle/tabular.git
 	url = git@github.com:godlygeek/tabular.git
+[submodule "vim/bundle/vim-surround.git"]
+	path = vim/bundle/vim-surround.git
+	url = git@github.com:tpope/vim-surround.git
