--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "vim/bundle/vim-surround.git"]
 	path = vim/bundle/vim-surround.git
 	url = git@github.com:tpope/vim-surround.git
+[submodule "vim/bundle/vim-rails.git"]
+	path = vim/bundle/vim-rails.git
+	url = git@github.com:tpope/vim-rails.git
