--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "vim/bundle/vim-bundler.git"]
 	path = vim/bundle/vim-bundler.git
 	url = git@github.com:tpope/vim-bundler.git
+[submodule "vim/bundle/vim-coffee-script.git"]
+	path = vim/bundle/vim-coffee-script.git
+	url = git@github.com:kchmck/vim-coffee-script.git
