--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "vim/bundle/vim-coffee-script.git"]
 	path = vim/bundle/vim-coffee-script.git
 	url = git@github.com:kchmck/vim-coffee-script.git
+[submodule "vim/bundle/vim-easymotion.git"]
+	path = vim/bundle/vim-easymotion.git
+	url = git@github.com:Lokaltog/vim-easymotion.git
