--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "vim/bundle/vim-easymotion.git"]
 	path = vim/bundle/vim-easymotion.git
 	url = git@github.com:Lokaltog/vim-easymotion.git
+[submodule "vim/bundle/vim-fugitive.git"]
+	path = vim/bundle/vim-fugitive.git
+	url = git@github.com:tpope/vim-fugitive.git
