--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "vim/bundle/vim-fugitive.git"]
 	path = vim/bundle/vim-fugitive.git
 	url = git@github.com:tpope/vim-fugitive.git
+[submodule "vim/bundle/vim-makegreen.git"]
+	path = vim/bundle/vim-makegreen.git
+	url = git@github.com:reinh/vim-makegreen.git
