--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "vim/bundle/vim-markdown.git"]
 	path = vim/bundle/vim-markdown.git
 	url = git@github.com:plasticboy/vim-markdown.git
+[submodule "vim/bundle/vim-rooter.git"]
+	path = vim/bundle/vim-rooter.git
+	url = git@github.com:airblade/vim-rooter.git
