add plugin bufexplorer.git

--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "vim/bundle/ultisnips.git"]
 	path = vim/bundle/ultisnips.git
 	url = git@github.com:SirVer/ultisnips.git
+[submodule "vim/bundle/bufexplorer.git"]
+	path = vim/bundle/bufexplorer.git
+	url = git@github.com:corntrace/bufexplorer.git
