--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "vim/bundle/neocomplcache.vim.git"]
 	path = vim/bundle/neocomplcache.vim.git
 	url = git@github.com:Shougo/neocomplcache.vim.git
+[submodule "vim/bundle/supertab.git"]
+	path = vim/bundle/supertab.git
+	url = git@github.com:ervandew/supertab.git
