add plugin vim-ruby.git

--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "vim/bundle/supertab.git"]
 	path = vim/bundle/supertab.git
 	url = git@github.com:ervandew/supertab.git
+[submodule "vim/bundle/vim-ruby.git"]
+	path = vim/bundle/vim-ruby.git
+	url = git://github.com/vim-ruby/vim-ruby.git
