--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "vim/bundle/vim-ruby.git"]
 	path = vim/bundle/vim-ruby.git
 	url = git://github.com/vim-ruby/vim-ruby.git
+[submodule "vim/bundle/vim-css3-syntax.git"]
+	path = vim/bundle/vim-css3-syntax.git
+	url = git@github.com:hail2u/vim-css3-syntax.git
