--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,6 @@
 [submodule "vim/bundle/vim-css3-syntax.git"]
 	path = vim/bundle/vim-css3-syntax.git
 	url = git@github.com:hail2u/vim-css3-syntax.git
+[submodule "vim/bundle/vim-multiple-cursors.git"]
+	path = vim/bundle/vim-multiple-cursors.git
+	url = git@github.com:terryma/vim-multiple-cursors.git
