--- a/.gitmodules
+++ b/.gitmodules
@@ -91,3 +91,6 @@
 [submodule "vim/bundle/vim-css-color.git"]
 	path = vim/bundle/vim-css-color.git
 	url = git@github.com:skammer/vim-css-color.git
+[submodule "vim/bundle/vim-colors-solarized.git"]
+	path = vim/bundle/vim-colors-solarized.git
+	url = git@github.com:altercation/vim-colors-solarized.git
