--- a/.gitmodules
+++ b/.gitmodules
@@ -94,3 +94,6 @@
 [submodule "vim/bundle/vim-colors-solarized.git"]
 	path = vim/bundle/vim-colors-solarized.git
 	url = git@github.com:altercation/vim-colors-solarized.git
+[submodule "vim/bundle/vim-colors.git"]
+	path = vim/bundle/vim-colors.git
+	url = git@github.com:mgutz/vim-colors.git
