--- a/.gitmodules
+++ b/.gitmodules
@@ -103,3 +103,6 @@
 [submodule "vim/bundle/vim-misc.git"]
 	path = vim/bundle/vim-misc.git
 	url = git@github.com:xolox/vim-misc.git
+[submodule "vim/bundle/shymenu_vim.git"]
+	path = vim/bundle/shymenu_vim.git
+	url = git@github.com:tomtom/shymenu_vim.git
