--- a/.gitmodules
+++ b/.gitmodules
@@ -112,3 +112,6 @@
 [submodule "vim/bundle/supertab.git"]
 	path = vim/bundle/supertab.git
 	url = git@github.com:ervandew/supertab.git
+[submodule "vim/bundle/vim-matchit.git"]
+	path = vim/bundle/vim-matchit.git
+	url = git@github.com:tsaleh/vim-matchit.git
