--- a/.gitmodules
+++ b/.gitmodules
@@ -112,3 +112,6 @@
 [submodule "vim/bundle/vim-over.git"]
 	path = vim/bundle/vim-over.git
 	url = git@github.com:osyo-manga/vim-over.git
+[submodule "vim/bundle/vim-signature.git"]
+	path = vim/bundle/vim-signature.git
+	url = git@github.com:kshenoy/vim-signature.git
